--- a/BrowserApp2/Base.lproj/Main.storyboard
+++ b/BrowserApp2/Base.lproj/Main.storyboard
@@ -31,10 +31,22 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HIz-ww-YGI">
                                 <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                 <items>
-                                    <barButtonItem title="←" id="bl4-lA-luP"/>
-                                    <barButtonItem title="→" id="7Kf-vh-DzY"/>
+                                    <barButtonItem title="←" id="bl4-lA-luP">
+                                        <connections>
+                                            <action selector="goBack:" destination="BYZ-38-t0r" id="59W-5z-mFy"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem title="→" id="7Kf-vh-DzY">
+                                        <connections>
+                                            <action selector="goForward:" destination="BYZ-38-t0r" id="bR2-yG-9Yl"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="iyJ-NL-EUx"/>
-                                    <barButtonItem systemItem="refresh" id="eNN-wT-AAL"/>
+                                    <barButtonItem systemItem="refresh" id="eNN-wT-AAL">
+                                        <connections>
+                                            <action selector="reload:" destination="BYZ-38-t0r" id="GdB-qm-0mP"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
                         </subviews>
@@ -53,6 +65,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="backButton" destination="bl4-lA-luP" id="STd-EZ-MNt"/>
+                        <outlet property="browserWebView" destination="7g0-cu-asm" id="ZfR-E5-QR1"/>
+                        <outlet property="forwardButton" destination="7Kf-vh-DzY" id="kWa-wF-Cnk"/>
+                        <outlet property="reloadButton" destination="eNN-wT-AAL" id="FdF-Ye-Nz3"/>
+                        <outlet property="urlTextField" destination="ljb-eC-02Q" id="2Tk-xn-lZM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
