--- a/BrowserApp2/Base.lproj/Main.storyboard
+++ b/BrowserApp2/Base.lproj/Main.storyboard
@@ -28,6 +28,9 @@
                                 <rect key="frame" x="0.0" y="92" width="375" height="531"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </webView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="sGY-UN-M2P">
+                                <rect key="frame" x="340" y="35" width="20" height="20"/>
+                            </activityIndicatorView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HIz-ww-YGI">
                                 <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                 <items>
@@ -52,6 +55,7 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="sGY-UN-M2P" firstAttribute="centerY" secondItem="ljb-eC-02Q" secondAttribute="centerY" id="6VO-gv-NJ8"/>
                             <constraint firstItem="ljb-eC-02Q" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="8Ba-yc-CaM"/>
                             <constraint firstItem="HIz-ww-YGI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8Cd-vh-Itu"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ljb-eC-02Q" secondAttribute="trailing" constant="10" id="8a9-47-t1f"/>
@@ -60,6 +64,7 @@
                             <constraint firstItem="HIz-ww-YGI" firstAttribute="top" secondItem="7g0-cu-asm" secondAttribute="bottom" id="Ml8-mX-DFK"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7g0-cu-asm" secondAttribute="trailing" id="NIl-GE-Fz1"/>
                             <constraint firstItem="7g0-cu-asm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="btf-Sx-3US"/>
+                            <constraint firstItem="ljb-eC-02Q" firstAttribute="trailing" secondItem="sGY-UN-M2P" secondAttribute="trailing" constant="5" id="oxa-lW-cuH"/>
                             <constraint firstItem="7g0-cu-asm" firstAttribute="top" secondItem="ljb-eC-02Q" secondAttribute="bottom" constant="32" id="r3k-LY-2ws"/>
                             <constraint firstItem="ljb-eC-02Q" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="shh-79-7Uv"/>
                         </constraints>
@@ -67,6 +72,7 @@
                     </view>
                     <connections>
                         <outlet property="backButton" destination="bl4-lA-luP" id="STd-EZ-MNt"/>
+                        <outlet property="browserActivityIndicatorView" destination="sGY-UN-M2P" id="5JX-f6-Yeb"/>
                         <outlet property="browserWebView" destination="7g0-cu-asm" id="ZfR-E5-QR1"/>
                         <outlet property="forwardButton" destination="7Kf-vh-DzY" id="kWa-wF-Cnk"/>
                         <outlet property="reloadButton" destination="eNN-wT-AAL" id="FdF-Ye-Nz3"/>
